--- a/games/CGgame/src/index.html
+++ b/games/CGgame/src/index.html
@@ -337,6 +337,10 @@
                             <span></span>
                         </button>
 					</div>
+                    <div id="cloud2">
+                        <img src="../assets/cloud.png">
+                        <p></p>
+                    </div>
                 </div>
             </div>
             <div id="help2_1" class="occupyWhole rounded-corners border">
@@ -392,6 +396,9 @@
                         <button class="norm-button" onclick="">
                             <span>OK</span>
                         </button>
+                        <button class="norm-button" onclick="">
+                            <span></span>
+                        </button>
                     </div>
                 </div>
                 <div id="pole3">
@@ -404,11 +411,38 @@
                     <div id="ansArea" align="center">
                         <input id="firstInp" type="text"><br>
                         <div id="ansInput">
-                            <p>y = </p>
-                            <input type="text" maxlength="2">
-                            <p> x </p>
-                            <input type="text" maxlength="1">
-                            <input type="text" maxlength="2">
+                            <p>y=</p>
+                            <!--<input type="text" maxlength="2">-->
+                            <select>
+                                <option value=""></option>
+                                <option value="-3">-3</option>
+                                <option value="-2">-2</option>
+                                <option value="-1">-1</option>
+                                <option value="0">0</option>
+                                <option value="1">1</option>
+                                <option value="2">2</option>
+                                <option value="3">3</option>
+                            </select>
+                            <p>x</p>
+                            <!--<input type="text" maxlength="1">
+                            <input type="text" maxlength="2">-->
+                            <select>
+                                <option value=""></option>
+                                <option value="+">+</option>
+                                <option value="-">-</option>
+                            </select>
+                            <select>
+                                <option value=""></option>
+                                <option value="0">0</option>
+                                <option value="1">1</option>
+                                <option value="2">2</option>
+                                <option value="3">3</option>
+                                <option value="4">4</option>
+                                <option value="5">5</option>
+                                <option value="6">6</option>
+                                <option value="7">7</option>
+                                <option value="8">8</option>
+                            </select>
                         </div>
                         <!--<div id="keyboard">
                             <table cellspacing="0">
